--- a/travel.html
+++ b/travel.html
@@ -118,6 +118,70 @@
             </div>
       </div>
 <br><br>
+<div class="cont6 container text-center">
+-Travelers'Reviews- 
+</div>
+<br>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="media container cont4">
+              <img class="align-self-center mr-3 imgR" src="fasolt.jpg" alt="Generic placeholder image">
+              <div class="media-body">
+                <h6 class="mt-0">By traveler Sally J.</h6><h5><strong>Luxury Vacation to Peru</strong></h5>
+                <i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x"></i><i class="fa fa-star fa-x" ></i>
+                <p class="mb-0">This was our third time using Next Destination. Each one has been great but this one is probably the best of all. It was perfect in every way. It was literally door to door service.</p>
+              </div>
+            </div>
+    </div>
+    <div class="carousel-item">
+      <div class="media container cont4">
+              <img class="align-self-center mr-3 imgR" src="face.jpg" alt="Generic placeholder image">
+              <div class="media-body">
+                <h6 class="mt-0">By traveler David E.</h6><h5><strong>Tanzania Travel</strong></h5>
+                <i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x"></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x"></i>
+                <p class="mb-0">I have nothing but great things to say about this travel company, the trip planner, and our guide for the Safari. Our planner and his staff were wonderful from start to finish and always there for a phone call.<br>I won't be doing another trip without the help of our planner and this company!</p>
+              </div>
+            </div>
+    </div>
+    <div class="carousel-item">
+      <div class="media cont4 container">
+              <img class="align-self-center mr-3 imgR" src="face2.jpg" alt="Generic placeholder image">
+              <div class="media-body">
+                <h6 class="mt-0">By traveler Ella J. </h6><h5><strong>Australia & New Zealand:Solo Trip</strong></h5>
+                <i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i>
+                <p class="mb-0">The travel designer from this travel company did an amazing job of organizing my trip.
+                  I am a single women traveler. I felt very safe with my accommodations</p>
+              </div>
+            </div>
+    </div>
+    <div class="carousel-item">
+      <div class="media cont4 container">
+              <img class="align-self-center mr-3 imgR" src="face3.jpg" alt="Generic placeholder image">
+              <div class="media-body">
+                <h6 class="mt-0">By traveler Robert M.</h6><h5><strong>Thailand-Family Trip</strong></h5>
+                <i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i><i class="fa fa-star fa-x" ></i>
+                <p class="mb-0">This travel team helped us plan a most memorable three-week trip to Thailand. Their knowledge and attention to detail made the trip a real pleasure. They were in regular contact with us to ensure we had all the information we needed and solicited feedback throughout our trip.</p>
+              </div>
+            </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<br><br>
       <div class="cont2 text-center">
         <h3 style="font-family: 'Bad Script', cursive;">Frequently Asked Questions(FAQs)<h3>
       </div>   
@@ -216,26 +280,10 @@
   <br><br>
 </div>
 </div>
-
-
-  <div class="cont3">
-    <br>
-    <div class="row">
-      <div class="col-7">
-        <br>
-        <div class="mapouter"><div class="gmap_canvas map"><iframe width="500" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=delhi%20Cannaught%20Place&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:left;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-      </div>
-      <div class="col-5 contact">
-        <div class="cont4">
-          <h3>For further queries </h3><hr style="border-color: white;">
-          <h4>meet us at the headquaters of <strong>Next Destination</strong> in Connaught Place,New Delhi-110075</h4>
-          <p>near street 365 /a, J B B Marg, Tardeo-tulsiwadi</p>
-        </div>
-      </div>
-
-  </div> 
-  </div>
-<hr style="border-width:1px; color: grey; ">
+    <div class="cont7">
+      <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=delhi%20connaught%20place&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">embedgooglemap.org</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:470px;width:600px;}</style></div>
+    </div>
+<hr>
 
 
 </body>
